1.1.0
 - new feature you can now add ip addresses that should not be routed through
   VPN tunnel

1.0.13
 - fixed bug 2 VPN auto connects after internet is up
 - fixed bug disconnect system tray menu entry enabled after connection error
 - fixed bug more than 1 ipsec PSK secrets entries causes the first PSK to be
   used

1.0.12
 - fixed bug no auto connect when internet connection becomes available
 - fixed bug tray icon context menu not updated when internet connection
   becomes available

1.0.11
 - status connected now on NetworkInterfaceMonitor event onAddressAdded
 - status disconnected now on NetworkInterfaceMonitor event
   onPtpInterfaceIsDeleted
 - fixed bug selecting private key in Connection Settings dialog -> PPP tab
   -> Properties failed with error:
   C_GetAttributeValue(data) failed: CKR_ATTRIBUTE_TYPE_INVALID

1.0.10
 - fixed bug disconnects even when a non default route entry is deleted
 - fixed bug successful redial after error does not change status to connected

1.0.9
 - fixed bug removes files that were installed by another package
   (Closes: #684962)

1.0.8
 - fixed bug wrong email address chosen as username in EAP TLS authentication
 - now caching EAP-TLS authentication certificate in /etc/ipsec.d/certs
   directory

1.0.7
 - to be compatible with more linux distributions use service command
   instead of invoke-rc.d command to start and stop runlevel services
 - corrected wrong desktop check
 - corrected platform specific qt includes
 - in Makefile configure the appropriate qmake command (qmake or qmake-qt4)
 - fixed FTBFS because gcc-4.7 no longer includes unistd.h
 - fixed bug connection editor crashes on selecting a certificate or private
   key from smart card (LP: #975822)
 - fixed bug trayicon doesn't scale properly (LP: #98616)
 - provided a separate error status icon

1.0.6
 - transfered writing files connectionName.info and defaultgateway.info to
   L2tpIPsecVpnControlDaemon

1.0.5